<resources>
    <string name="app_name">新旅程</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="confirm_exit">再按一次返回键退出!</string>
    <string name="gionee_travel">金立新旅程</string>
    <string name="notepad">记事本</string>
    <string name="myorder">我的订单</string>
    <string name="passenger">我的常用旅客</string>
    <string name="collection">我的收藏</string>
    <string name="call_record">电话预订记录</string>
    <string name="footprint">我的足迹</string>
    <string name="achievement">旅程成就</string>
    <string name="trainticketsDetails">火车票详情</string>
    <string name="flightticketsDetails">航班详情</string>
    <string name="departcity">出发地</string>
    <string name="arrivecity">目的地</string>
    <string name="selectcity">选择城市</string>
    <string name="startRoute">开启新旅程</string>
    <string name="goRoute">订飞机酒店</string>
    <string name="continueTravel">继续旅程</string>
    <string name="label_arrivecity">目的地城市</string>
    <string name="single">单程</string>
    <string name="round">往返</string>
    <string name="takeOffTime">出发日期</string>
    <string name="custom_service">客服</string>
    <string name="unsubscribe">退订</string>
    <string name="gaiqian_retirement">退改签</string>
    <string name="cancel">取消</string>
    <string name="call">拨打</string>
    <string name="found">发现</string>
    <string name="travel">新旅程</string>
    <string name="information">我的</string>
    <string name="newRoute">开始新旅程</string>
    <string name="flight">飞机</string>
    <string name="train">火车</string>
    <string name="hotel">酒店</string>
    <string name="preday">前一天</string>
    <string name="nextDay">后一天</string>
    <string name="takeOff">起飞</string>
    <string name="price">价格</string>
    <string name="screening">筛选</string>
    <string name="suborder">订单填写</string>
    <string name="ok">确定</string>
    <string name="adddengjiren"> 添加登机人</string>
    <string name="addlianxiren"> 添加联系人</string>
    <string name="name">姓名</string>
    <string name="pleasename">请输入姓名</string>
    <string name="zhengjianxinghao">证件类型</string>
    <string name="shenfenzheng">身份证</string>
    <string name="zhengjianhao">证件号</string>
    <string name="pleasecode">请输入身份证号</string>
    <string name="editdengjiren">编辑登机人</string>
    <string name="warning">注意：务必正确填写姓名和身份证号,以保证正常出票</string>
    <string name="editlvkje">编辑常用旅客</string>
    <string name="edit_contacts">编辑常用联系人</string>
    <string name="tikectprice">票价</string>
    <string name="jijian">机建</string>
    <string name="oril">燃油</string>
    <string name="airtikectsave">机票保险</string>
    <string name="tuigaiqian">退改签规则</string>
    <string name="dengjiren">登机人</string>
    <string name="contactperson">联系人</string>
    <string name="mobile">手机号</string>
    <string name="youjibaoxiao">邮寄报销凭证</string>
    <string name="pay">立即支付</string>
    <string name="yuding">预订</string>
    <string name="xinzengdengjiren">新增登机人</string>
    <string name="xinzenglvke">新增常用旅客</string>
    <string name="add_contacts">新增联系人</string>
    <string name="add_contacts_from">从通讯录中添加</string>
    <string name="lvke">常用旅客</string>
    <string name="contacts">常用联系人</string>
    <string name="edit">编辑</string>
    <string name="delect">删除</string>
    <string name="suredel">您确定要删除该常用的旅客信息？</string>
    <string name="sure_del_contact">您确定要删除该常用的联系人信息？</string>
    <string name="cancelshaixuan">清空筛选</string>
    <string name="traintype">车次类型</string>
    <string name="seattype">座席类型</string>
    <string name="starttime">发车时间</string>
    <string name="arrivetime">到达时间</string>
    <string name="takephone">拍照</string>
    <string name="selectbendizhaopian">选择本地照片</string>
    <string name="go_travel">继续旅程</string>
    <string name="details">详情</string>
    <string name="cancel_search">清空筛选</string>
    <string name="takeoff">起飞时间</string>
    <string name="airlineCompany">航空公司</string>
    <string name="craftType">机型</string>
    <string name="classType">舱位</string>
    <string name="airport">起降机场</string>
    <string name="citylist">城市列表</string>
    <string name="city">城市</string>
    <string name="life_service">生活服务</string>
    <string name="tujia">途家公寓</string>
    <string name="hoteldesc">酒店简介</string>
    <string name="hotelmap">酒店地图</string>
    <string name="traintabletime">列车时刻表</string>
    <string name="stay">停留</string>
    <string name="station">车站</string>
    <string name="arrive">到达</string>
    <string name="starttrain">发车</string>
    <string name="waste">耗时</string>
    <string name="min">分钟</string>
    <string name="min2">分</string>
    <string name="hour">小时</string>
    <string name="pay_title">支付</string>
    <string name="p_departcity">选择出发地</string>
    <string name="p_arrivecity">选择目的地</string>
    <string name="hint_string">中文/拼音/首字母</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">日期必须在 %1$s 和 %2$s 之间.</string>
    <string name="month_name_format">yyyy\'年\'MM\'月\' </string>
    <string name="dportcode">起飞</string>
    <string name="aportcode">降落</string>
    <string name="dport">起飞机场</string>
    <string name="aport">降落机场</string>
    <string name="address_name">收件人姓名</string>
    <string name="address_mobile">手机号码</string>
    <string name="maincode">邮政编码</string>
    <string name="address">详细地址</string>
    <string name="address_message">收件信息</string>
    <string name="finish">完成</string>
    <string name="mail_type">通过挂号信(免费)邮寄报销凭证</string>
    <string name="guahaoxin">挂号信(免费)</string>
    <string name="write_address">填写收件信息</string>
    <string name="custom_dialog_title">拨打客服电话</string>
    <string name="custom_dialog_content">您是否要拨打客服电话？</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="zhanghao">帐号</string>
    <string name="password">密码</string>
    <string name="pleasemobile">请输入手机号</string>
    <string name="pleasepasswrd">请输入密码</string>
    <string name="yanzhengma">验证码</string>
    <string name="pleaseyanzhengcode">填写验证码</string>
    <string name="sendyanzhengcode">发送验证码</string>
    <string name="now_pw_null">请输入当前密码</string>
    <string name="new_pw_null">请输入新密码</string>
    <string name="passwordguize">密码必须为4-16位字母或数字组成</string>
    <string name="passwordguize2">为了您的帐号安全，新旧密码必须不同</string>
    <string name="daojishi">秒重新获取</string>
    <string name="inputpw">输入密码</string>
    <string name="forget_pw">忘记密码</string>
    <string name="regcode">注册用户中心账号</string>
    <string name="getcode">获取短信验证码</string>
    <string name="note_one">  验证码已经发送到</string>
    <string name="note_sencond">，接收短信大约需要60秒</string>
    <string name="next">下一步</string>
    <string name="photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="net_error_title">哎呀,没有结果!</string>
    <string name="net_error_reason">可能原因:</string>
    <string name="net_error_reason_one">网络不稳定</string>
    <string name="net_error_reason_two">尚未接入互联网</string>
    <string name="net_error_reason_three">没有符合条件的结果</string>
    <string name="net_refresh">网络不给力，点击屏幕重新加载</string>
    <string name="not_order">没有订单</string>
    <string name="not_find">没有符合条件的查询结果</string>
    <string name="refresh">刷新</string>
    <string name="id_info">账号信息</string>
    <string name="edit_pw">修改密码</string>
    <string name="edit_gionee_pw">修改用户中心密码</string>
    <string name="now_pw">当前密码</string>
    <string name="new_pw">新密码</string>
    <string name="please_now_pw">请输入当前密码</string>
    <string name="please_new_pw">请输入新密码</string>
    <string name="train_lookup">火车票查询</string>
    <string name="train2">火车票</string>
    <string name="processing_order">订单生成中</string>
    <string name="zhang">张</string>
    <string name="L">大型机</string>
    <string name="M">中型机</string>
    <string name="S">小型机</string>
    <string name="wifi_hotal">仅在wifi情况下显示酒店图片</string>
    <string name="my_location">允许访问我的位置</string>
    <string name="update">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="clean_cache">清除缓存</string>
    <string name="exit">退出登录</string>
    <string name="setting">设置</string>
    <string name="clean_dialog_title">  删除图片缓存及其他帮您自动填写的信息。确定清除？</string>
    <string name="refreshyanzhengcode">重发验证码</string>
    <string name="settings">设置</string>
    <string name="information_center">消息中心</string>
    <string name="order">订单</string>
    <string name="submitorder">处理中</string>
    <string name="applylocationpermission">是否允许"新旅程访问我的位置"？</string>
    <string name="applylocationok">允许</string>
    <string name="applylocationcancel">拒绝</string>
    <string name="my_travel">我的旅程</string>
    <string name="import_title">是否从短信中获取近期的酒店信息添加到新旅程</string>
    <string name="import_btn">导入</string>
    <string name="import_sms">从短信导入新旅程</string>
    <string name="edit_form">修改</string>
    <string name="order_form_num">订单号</string>
    <string name="order_form_hotal_tel">酒店电话</string>
    <string name="flight_status">航班动态</string>
    <string name="route">路线</string>
    <string name="hotal_address">酒店位置</string>
    <string name="my_location2">我的位置</string>
    <string name="select">查询</string>
    <string name="please_yu">请于</string>
    <string name="hotal_warning1">点前，到店。</string>
    <string name="hotal_warning2">如不能请致电</string>
    <string name="hotel_detail">酒店详情</string>
    <string name="hotal_ruzhu_time">入住时间</string>
    <string name="renzhengshibai">认证失败，请检查填写是否正确</string>
    <string name="service_error">请求失败</string>
    <string name="sendtimeout">发送超时</string>
    <string name="id_dongjie">帐号已冻结</string>
    <string name="yanzhengma_not_pipei">验证码验证类型不匹配</string>
    <string name="style_error">信令格式错误</string>
    <string name="send_chaochu_pinlv">下发短信验证码超出了频率</string>
    <string name="id_exists">帐号已存在</string>
    <string name="yanzhengma_error">验证码填写错误，请重新获取验证码</string>
    <string name="yanzhengma_error2">验证码是6位数字，请重新填写</string>
    <string name="yanzhengma_null">请输入验证码</string>
    <string name="id_not_exist">用户不存在</string>
    <string name="yanzhengma_guoqi">验证码过期</string>
    <string name="huihuaguoqi">会话已过期</string>
    <string name="not_reset_reg">不允许重复注册</string>
    <string name="must_tuxing">必须提供图形验证码</string>
    <string name="passenger_name_null">请输入姓名</string>
    <string name="name_is_chinese">姓名必须是中文，请重新输入</string>
    <string name="name_is_limit">姓名限8字以内</string>
    <string name="name_short">输入的姓名过短,至少两位</string>
    <string name="mobile_null">请输入手机号</string>
    <string name="maincode_null">请输入邮政编码</string>
    <string name="maincode_error">输入的邮政编码不正确</string>
    <string name="address_null">请输入邮寄地址</string>
    <string name="id_error">输入的身份证号不正确</string>
    <string name="id_null">请输入身份证号</string>
    <string name="network_timeout">网络不给力</string>
    <string name="edit_pw_suc">修改密码成功</string>
    <string name="id_not_null">请输入帐号</string>
    <string name="pw_not_null">请输入密码</string>
    <string name="validate_not_null">请输入验证码</string>
    <string name="validate_error">输入的验证码不正确，请重新输入</string>
    <string name="id_not_guize">输入的帐号不正确</string>
    <string name="mobile_not_guize">输入的手机号不正确</string>
    <string name="reset_pw_suc">重置密码成功,为您自动登录</string>
    <string name="yanzhengma_send">验证码已经发送</string>
    <string name="login_suc">登录成功</string>
    <string name="reg_suc">注册成功,为您自动登录</string>
    <string name="validate_pass">验证通过</string>
    <string name="please_add_passenger">请点击添加登机人</string>
    <string name="please_add_one_passenger">至少添加一位登机人</string>
    <string name="select_failture">查询失败</string>
    <string name="no_huiyuan_login">非会员直接预订</string>
    <string name="order_num">订单号</string>
    <string name="order_room_type">房间型号</string>
    <string name="in_time">入住时间</string>
    <string name="order_flight">订去上海的机票</string>
    <string name="over">完成</string>
    <string name="dollor">￥</string>
    <string name="please_id">请输入帐号</string>
    <string name="hotel_ordersuc_str">已经将该酒店添加到我的旅程</string>
    <string name="hotel_cus_person">入住人</string>
</resources>