<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_hotel_order_ll"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="23dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/ordersuc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                style="@style/description_v10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/hotel_ordersuc_str" />

            <TextView
                android:id="@+id/activity_hotel_ordersuc_tv_travel"
                style="@style/spec_v5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/hotel_ordersuc_str" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/activity_hotel_ordersuc_tv_hotelname"
        style="@style/description_v10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/description_v13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/order_num" />

        <TextView
            android:id="@+id/activity_hotel_ordersuc_tv_orderid"
            style="@style/description_v13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="100dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/dividing_line_horizontal" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="19dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/description_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_cus_person" />

        <TextView
            android:id="@+id/activity_hotel_ordersuc_tv_cusname"
            style="@style/description_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/description_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactperson" />

        <TextView
            android:id="@+id/activity_hotel_ordersuc_tv_contactName"
            style="@style/description_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp" />

        <TextView
            android:id="@+id/activity_hotel_ordersuc_tv_phone"
            style="@style/description_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/description_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/order_room_type" />

        <TextView
            android:id="@+id/activity_hotel_ordersuc_tv_roomName"
            style="@style/description_v7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="100dp" />

        <LinearLayout
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/activity_hotel_ordersuc_tv_roomName"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingRight="15dp" >

            <TextView
                style="@style/spec_v5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollor" />

            <TextView
                android:id="@+id/activity_hotel_ordersuc_tv_prive"
                style="@style/spec_v3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/description_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/in_time" />

        <TextView
            android:id="@+id/activity_hotel_ordersuc_tv_indate"
            style="@style/description_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_hotel_ordersuc_tv_leavedate"
        style="@style/description_v7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/activity_hotel_ordersuc_bt_flight_des"
            style="@style/button_v2"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"
            android:background="@drawable/red_btn_selector"
            android:text="@string/order_flight" />

        <Button
            android:id="@+id/activity_hotel_ordersuc_bt_flight_ori"
            style="@style/button_v2"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="9dp"
            android:background="@drawable/red_btn_selector"
            android:text="@string/order_flight" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_finish"
        style="@style/button_v1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/order_ll_height"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/white_btn_v2_selector"
        android:text="@string/over" />

</LinearLayout>